crates/mpl-lang/tests/errors/invalid_time_unit.mpl
dataset:metric | align to 5x using avg

